--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" href="image/Picsart_23-09-14_20-08-50-870.jpg.png">
+        <link rel="icon" href="Picsart_23-09-14_20-08-50-870.jpg.png">
 <title>
    casablanca_city
 </title>
 </head>
-    <body background style="background-image: url(image/rijaaaaaaaal.jpeg); 
+    <body background style="background-image: url(rijaaaaaaaal.jpeg); 
     background-size: 250vh; background-repeat: no-repeat;">
     </background>
        
@@ -41,7 +41,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="image/Picsart_23-09-14_20-08-50-870.jpg.png" height="550" width="650">
+    <img src="Picsart_23-09-14_20-08-50-870.jpg.png" height="550" width="650">
  <!--<p>
         &nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;<button type="button" onclick="alert('https://discord.gg/WMXpsvrzHv')" style="color: rgb(4, 4, 4);">Click here discord !</button>
